Fixed some errors with capitalization

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,8 +68,7 @@
                 android:id="@+id/cb_xs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="0-3ft"
-                />
+                android:text="0-3ft" />
 
             <CheckBox
                 android:id="@+id/cb_s"
